--- a/Proje/Views/TvShows/Delete.cshtml
+++ b/Proje/Views/TvShows/Delete.cshtml
@@ -1,36 +1,38 @@
 ﻿@model Proje.Models.TvShow
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>@localizer["Delete"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@localizer["Are you sure you want to delete this?"]</h3>
 <div>
-    <h4>TvShow</h4>
+    <h4>@localizer["TvShow"]</h4>
     <hr />
     <dl class="row mb-2">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showTitle)
+             <label asp-for="showTitle" class="control-label">@localizer["Title"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showTitle)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showPoster)
+            <label asp-for="showPoster" class="control-label">@localizer["Poster URL"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showPoster)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showStartYear)
+            <label asp-for="showStartYear" class="control-label">@localizer["Start Year"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showStartYear)
         </dd>
         <dt class = "col-sm-2">
-            End Year
+            <label asp-for="showEndYear" class="control-label">@localizer["End Year"]</label>
         </dt>
         <dd class = "col-sm-10">
             	@if (ViewData["endYear"] != null)
@@ -43,25 +45,25 @@
 			}
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showEpisodes)
+             <label asp-for="showEpisodes" class="control-label">@localizer["Number of episodes"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showEpisodes)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showRating)
+            <label asp-for="showRating" class="control-label">@localizer["Rating"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showRating)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showStory)
+           <label asp-for="showStory" class="control-label">@localizer["Plot Summery"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showStory)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.showCategories)
+           <label asp-for="showCategories" class="control-label">@localizer["Categories"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.showCategories)
@@ -70,7 +72,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="showId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="@localizer["Delete"]" class="btn btn-danger" /> |
+        <a asp-action="Index">@localizer["Back to List"]</a>
     </form>
 </div>
