--- a/Proje/Views/Animes/Error.cshtml
+++ b/Proje/Views/Animes/Error.cshtml
@@ -1,9 +1,11 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 @{
 }
 <div class="alert alert-danger text-center">
-    <h1>You have entered wrong values</h1>
-    <p>Check the categories</p>
+    <h1>@localizer["You have entered wrong values"]</h1>
+    <p>@localizer["Check the categories"]</p>
 </div>
