--- a/Proje/Views/Animes/Index.cshtml
+++ b/Proje/Views/Animes/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Proje.Models.Anime>
-
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 @{
 	ViewData["Title"] = "Index";
 }
@@ -87,14 +88,14 @@
 	<form method="get" asp-action="Index" id="Form" class="form-inline Form1">
 		<div class="row">
 			<div class="col input-group">
-				<label class="col-sm-2 col-form-label">Sort By:</label>
+				<label class="col-sm-2 col-form-label">@localizer["Sort By"]:</label>
 				<div class="input-group-append">
 					<select id="sortBy" name="sortBy" class="form-select" width=100%>
-						<option selected value="">Please select an option</option>
-						<option value="title">Title</option>
-						<option value="year">Most recent</option>
-						<option value="rating">Rating</option>
-						<option value="episodes">Number of episodes</option>
+						<option selected value="">@localizer["Please select an option"]</option>
+						<option value="title">@localizer["Title"]</option>
+						<option value="year">@localizer["Most recent"]</option>
+						<option value="rating">@localizer["Rating"]</option>
+						<option value="episodes">@localizer["Number of episodes"]</option>
 					</select>
 				</div>
 			</div>
@@ -103,14 +104,14 @@
 				{
 					if (User.IsInRole("admin"))
 					{
-						<a asp-controller="Animes" asp-action="Create" class="btn btn-primary ms-1">New Anime</a>
+						<a asp-controller="Animes" asp-action="Create" class="btn btn-primary ms-1">@localizer["New Anime"]</a>
 					}
 				}
 			</div>
 			<div class="col input-group ">
 				<input type="text" class="form-control" name="search" autocomplete="off">
 				<div class="input-group-append">
-					<button class="btn btn-info" type="submit" value="Search">Search</button>
+					<button class="btn btn-info" type="submit" value="Search">@localizer["Search"]</button>
 				</div>
 			</div>
 	</form>
@@ -156,14 +157,14 @@
 					{
 						if (User.IsInRole("admin"))
 						{
-							<a asp-action="Edit" asp-route-id="@item.animeId">Edit</a>
-							<a asp-action="Details" asp-route-id="@item.animeId">Details</a>
-							<a asp-action="Delete" asp-route-id="@item.animeId" class="delete">Delete</a>
+							<a asp-action="Edit" asp-route-id="@item.animeId">@localizer["Edit"]</a>
+							<a asp-action="Details" asp-route-id="@item.animeId">@localizer["Details"]</a>
+							<a asp-action="Delete" asp-route-id="@item.animeId" class="delete">@localizer["Delete"]</a>
 						}
 					}
 				</td>
 				<td>
-					<a asp-action="addAnime" asp-route-animeId="@item.animeId" class="btn btn-primary">Add to List</a>
+					<a asp-action="addAnime" asp-route-animeId="@item.animeId" class="btn btn-primary">@localizer["Add to List"]</a>
 				</td>
 			</tr>
 		}
