--- a/Proje/Views/Animes/addAnime.cshtml
+++ b/Proje/Views/Animes/addAnime.cshtml
@@ -4,7 +4,8 @@
 @{
 }
 @model Proje.Models.AnimeUser
-
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 
 <style>
 	.box {
@@ -27,7 +28,7 @@
 
 <div class="container ">
 	<div class="col-md-3 col-md-offset-3 box">
-		<div class="text-center mb-5"><h2>Add anime to list</h2></div>
+		<div class="text-center mb-5"><h2>@localizer["Add anime to list"]</h2></div>
 		<form asp-action="addAnime">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<input type="hidden" asp-for="animeId" />
@@ -35,17 +36,17 @@
 			<div class="mb-4">
 				<label asp-for="watchStatus" class="control-label"></label>
 				<select asp-for="watchStatus" class="form-select" required>
-					<option value="">Select score</option>
-					<option value="Completed">Completed</option>
-					<option value="Watching">Watching</option>
-					<option value="Plan to watch">Plan to watch</option>
+					<option value="">@localizer["Select score"]</option>
+					<option value="Completed">@localizer["Completed"]</option>
+					<option value="Watching">@localizer["Watching"]</option>
+					<option value="Plan to watch">@localizer["Plan to watch"]</option>
 				</select>
 				<span asp-validation-for="watchStatus" class="text-danger"></span>
 			</div>
 			<div class="mb-4">
 				<label asp-for="userRating" class="control-label"></label>
 				<select asp-for="userRating" class="form-select" required>
-					<option value="">Select score</option>
+					<option value="">@localizer["Select score"]</option>
 					<option value=10>10</option>
 					<option value=9>9</option>
 					<option value=8>8</option>
@@ -61,7 +62,7 @@
 			</div>
 
 			<div class="form-group">
-				<input type="submit" value="Submit" class="btn btn-primary float-lg-end" />
+				<input type="submit" value="@localizer["Submit"]" class="btn btn-primary float-lg-end" />
 			</div>
 		</form>
 	</div>
