--- a/Proje/Views/Animes/addError.cshtml
+++ b/Proje/Views/Animes/addError.cshtml
@@ -1,10 +1,12 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 @{
 }
 <div class="alert alert-danger text-center">
-    <h1>The Anime Could not be added due to some error.</h1>
+    <h1>@localizer["The Anime Could not be added due to some error."]</h1>
     @if (TempData["modelerror"] != null)
 {
     <div class="col-md-12 alert alert-success">
