--- a/Proje/Views/Home/Index.cshtml
+++ b/Proje/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 
 <div class="text-center">
-    <h2 class="display-4">Login to your account</h2>
-    <h2 class="display-4">And start adding shows to your list</h2>
+    <h2 class="display-4">@localizer["Login to your account"]</h2>
+    <h2 class="display-4">@localizer["And start adding shows to your list"]</h2>
 
 </div>
