--- a/Proje/Views/Movies/Details.cshtml
+++ b/Proje/Views/Movies/Details.cshtml
@@ -1,53 +1,54 @@
 ﻿@model Proje.Models.Movie
-
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@localizer["Details"]</h1>
 
 <div>
-    <h4>Movie</h4>
+    <h4>@localizer["Movie"]</h4>
     <hr />
     <dl class="row mb-2">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.movieTitle)
+             <label asp-for="movieTitle" class="control-label">@localizer["Title"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.movieTitle)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.movieYear)
+            <label asp-for="movieYear" class="control-label">@localizer["Release Year"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.movieYear)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.moviePoster)
+            <label asp-for="moviePoster" class="control-label">@localizer["Poster URL"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.moviePoster)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.movieRating)
+            <label asp-for="movieRating" class="control-label">@localizer["Rating"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.movieRating)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.movieStory)
+            <label asp-for="movieStory" class="control-label">@localizer["Plot Summery"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.movieStory)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.movieRunningTime)
+            <label asp-for="movieRunningTime" class="control-label">@localizer["Running Time"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.movieRunningTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.movieCategories)
+           <label asp-for="movieCategories" class="control-label">@localizer["Categories"]</label>
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.movieCategories)
@@ -55,6 +56,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.movieId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.movieId">@localizer["Edit"]</a> |
+    <a asp-action="Index">@localizer["Back to List"]</a>
 </div>
