--- a/Proje/Views/Shared/_Layout.cshtml
+++ b/Proje/Views/Shared/_Layout.cshtml
@@ -1,8 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Localization
 @using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Mvc.Localization
-@using Microsoft.Extensions.Options
 @inject IViewLocalizer localizer
+
+@using Microsoft.Extensions.Options
 @inject IOptions<RequestLocalizationOptions> locOptions
 @{
     var requestCulture = Context.Features.Get<IRequestCultureFeature>();
@@ -56,13 +57,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Animes" asp-action="Index">Anime</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Animes" asp-action="Index">@localizer["Anime"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movie</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">@localizer["Movie"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TvShows" asp-action="Index">Series</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TvShows" asp-action="Index">@localizer["Series"]</a>
                         </li>
                         
                         <li>
@@ -88,7 +89,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MyWatchList - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - MyWatchList - <a asp-area="" asp-controller="Home" asp-action="Privacy">@localizer["Privacy"]</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
