--- a/Proje/Views/Shared/_LoginPartial.cshtml
+++ b/Proje/Views/Shared/_LoginPartial.cshtml
@@ -1,27 +1,29 @@
 ﻿@using Microsoft.AspNetCore.Identity
-
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
 
+  
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-controller="Account" asp-action="Login" title="Manage">Hello @UserManager.GetUserAsync(User).Result.Name!</a>
+        <a id="manage" class="nav-link text-dark" asp-controller="Account" asp-action="Login" title="Manage">@localizer["Hello"] @UserManager.GetUserAsync(User).Result.Name!</a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button id="logout" type="submit" class="nav-link btn btn-link text-dark">@localizer["Logout"]</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-controller="Account" asp-action="Register">Register</a>
+        <a class="nav-link text-dark" id="register" asp-controller="Account" asp-action="Register">@localizer["Register"]</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-controller="Account" asp-action="Login">Login</a>
+        <a class="nav-link text-dark" id="login" asp-controller="Account" asp-action="Login">@localizer["Login"]</a>
     </li>
 }
 </ul>
