--- a/Proje/Views/TvShows/MyShowList.cshtml
+++ b/Proje/Views/TvShows/MyShowList.cshtml
@@ -1,8 +1,4 @@
-﻿@model IEnumerable<Proje.Models.Movie>
-
-@{
-	ViewData["Title"] = "Index";
-}
+﻿@model IEnumerable<Proje.Models.TvShowUser>
 
 <style>
 	.Form1 {
@@ -11,11 +7,12 @@
 		padding: 7px 7px;
 		padding-inline: 3% 3%;
 		color: #EEEEEE;
+		font-size:1vw;
 	}
 
 	.btn-info {
-		background-color: #00ADB5;
 		border-block-color: #00ADB5;
+		background-color: #00ADB5;
 	}
 
 	.list-box {
@@ -57,7 +54,7 @@
 		.img-card:hover {
 			-webkit-transform: scale(1.03);
 			transform: scale(1.03);
-			box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
+			box-shadow: 0px 10px 25px rgba(100, 100, 100, 0.6);
 		}
 
 	.fa-star {
@@ -81,32 +78,27 @@
 			color: darkslategray
 		}
 </style>
+
+
 <div>
-	<form method="get" asp-action="Index" id="Form" class="form-inline Form1">
+	<form method="get" asp-action="MyShowList" id="Form" class="form-inline Form1">
 		<div class="row">
 			<div class="col input-group">
 				<label class="col-sm-2 col-form-label">Sort By:</label>
 				<div class="input-group-append">
-					<select id="sortBy" name="sortBy" class="form-select">
+					<select id="sortBy" name="sortBy" class="form-select" width=100%>
 						<option selected value="">Please select an option</option>
 						<option value="title">Title</option>
 						<option value="year">Most recent</option>
 						<option value="rating">Rating</option>
-						<option value="runningTime">Running time</option>
+						<option value="episodes">Number of episodes</option>
+						<option value="planToWatch">Plan to Watch</option>
+						<option value="completed">Completed</option>
+						<option value="watching">Watching</option>
 					</select>
 				</div>
-				
-				
 			</div>
-			<div class="col text-center">
-				@if (User.Identity.IsAuthenticated)
-				{
-					if (User.IsInRole("admin"))
-					{
-						<a asp-controller="Movies" asp-action="Create" class="btn btn-primary ms-1">New Movie</a>
-					}
-				}
-			</div>
+			<div class="col"></div>
 			<div class="col input-group ">
 				<input type="text" class="form-control" name="search" autocomplete="off">
 				<div class="input-group-append">
@@ -116,37 +108,38 @@
 	</form>
 </div>
 
+
+
+
 <table class="table">
+
 	<tbody>
 		@foreach (var item in Model)
 		{
 			<tr class="list-box">
 				<td width="30%">
-					<a asp-action="Details" asp-route-id="@item.movieId"><img src="@item.moviePoster" class="img-card" asp-append-version="true"></a>
+					<a asp-action="Details" asp-route-id="@item.showId"><img src="@item.tvShow.showPoster" class="img-card" asp-append-version="true"></a>
 				</td>
-				<td class="pl">
-					<a asp-action="Details" asp-route-id="@item.movieId" class="title">@Html.DisplayFor(modelItem => item.movieTitle)</a>
+				<td class="pl ">
+					<a asp-action="Details" asp-route-id="@item.showId" class="title">@Html.DisplayFor(modelItem => item.tvShow.showTitle)</a>
 				</td>
 				<td class="text-left">
 					<i class="fa-solid fa-star"></i>
-					@Html.DisplayFor(modelItem => item.movieRating)
+					@Html.DisplayFor(modelItem => item.userRating)
 				</td>
-				<td>
-					@if (User.Identity.IsAuthenticated)
-					{
-						if (User.IsInRole("admin"))
-						{
-							<a asp-action="Edit" asp-route-id="@item.movieId">Edit</a>
-							<a asp-action="Delete" asp-route-id="@item.movieId" class="delete">Delete</a>
-						}
-					}
+				<td class="text-left">
+					
+					@Html.DisplayFor(modelItem => item.watchStatus)
 				</td>
+
 				<td>
-					<a asp-action="addMovie" asp-route-movieId="@item.movieId" class="btn btn-primary">Add to List</a>
+					<a asp-action="deleteShow" asp-route-showId="@item.showId" asp-route-userId="@item.userId" class="delete">Delete</a>
+					<a asp-action="editShow" asp-route-showId="@item.showId">Edit</a>
 				</td>
 			</tr>
 		}
 	</tbody>
+
 </table>
 
 @section Scripts {
