--- a/Proje/Views/Account/Register.cshtml
+++ b/Proje/Views/Account/Register.cshtml
@@ -7,15 +7,15 @@
 
 <style>
     .box {
-        
         background-color: #f2f3f4;
-        position: absolute;
-        left: 38%;
-        top: 17%;
         -webkit-box-shadow: 0 0 40px 0 rgba(20, 20, 20, 0.4);
+        display: table;
         box-shadow: 0 0 40px 0 rgba(20, 20, 20, 0.4);
         border-radius: 10px;
-        padding: 20px 35px;
+        padding: 40px 35px;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
     }
 
     input {
@@ -24,17 +24,18 @@
         border-radius: 10px;
     }
 </style>
+@if (TempData["Error"] != null)
+{
+    <div class="col-md-12 alert alert-danger text-center">
+        <span><b>Sorry!</b> - @TempData["Error"] </span>
+    </div>
+}
 
 <div class="container ">
     <div class="col-md-3 col-md-offset-3 box">
         <div class="text-center mb-5"><h2>Sign Up</h2></div>
 
-        @if (TempData["Error"] != null)
-        {
-            <div class="col-md-12 alert alert-danger text-center">
-                <span><b>Sorry!</b> - @TempData["Error"] </span>
-            </div>
-        }
+        
         <form asp-action="Register">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-4">
