--- a/Proje/Views/Movies/editMovie.cshtml
+++ b/Proje/Views/Movies/editMovie.cshtml
@@ -1,4 +1,14 @@
-﻿@model Proje.Models.AnimeUser
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
+@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
+@model Proje.Models.MovieUser
 
 
 <style>
@@ -19,24 +29,20 @@
 		box-shadow: 0 0 40px 0 rgba(255, 255, 255,1);
 		border-radius: 10px;
 	}
-
-	
 </style>
 
-
-
-	<div class="col-md-3 box">
-		<div class="text-center mb-5"><h2>Add anime to list</h2></div>
-		<form asp-action="addAnime">
+<div class="container ">
+	<div class="col-md-3 col-md-offset-3 box">
+		<div class="text-center mb-5"><h2>Edit the Movie</h2></div>
+		<form asp-action="editMovie">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-			<input type="hidden" asp-for="animeId" />
+			<input type="hidden" asp-for="movieId" />
 			<input type="hidden" asp-for="userId" />
 			<div class="mb-4">
 				<label asp-for="watchStatus" class="control-label"></label>
 				<select asp-for="watchStatus" class="form-select" required>
 					<option value="">Select score</option>
 					<option value="Completed">Completed</option>
-					<option value="Watching">Watching</option>
 					<option value="Plan to watch">Plan to watch</option>
 				</select>
 				<span asp-validation-for="watchStatus" class="text-danger"></span>
@@ -60,8 +66,8 @@
 			</div>
 
 			<div class="form-group">
-				<input type="submit" value="Submit" class="btn btn-primary float-lg-end" />
+				<input type="submit" value="Save" class="btn btn-primary float-lg-end" />
 			</div>
 		</form>
 	</div>
-
+</div>
