--- a/Proje/Views/Shared/_Layout.cshtml
+++ b/Proje/Views/Shared/_Layout.cshtml
@@ -1,78 +1,104 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyWatchList</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>MyWatchList</title>
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/Proje.styles.css" asp-append-version="true" />
 	<link rel="icon" type="image/x-icon" href="~/favicon.ico">
 	<link href="~/css/chosen/chosen.min.css" rel="stylesheet" />
-	<link href="c:\users\mohamed nour\source\repos\web-programming-asp.netcore\proje\wwwroot\css\nice-select.css" rel="stylesheet" />
-	<script src="c:\users\mohamed nour\source\repos\web-programming-asp.netcore\proje\wwwroot\js\jquery.js"></script>
-	<script src="c:\users\mohamed nour\source\repos\web-programming-asp.netcore\proje\wwwroot\js\jquery.nice-select.js"></script>
-	<script src="c:\users\mohamed nour\source\repos\web-programming-asp.netcore\proje\wwwroot\js\jquery.nice-select.min.js"></script>
-    <script src="https://kit.fontawesome.com/07b62ac2c8.js" crossorigin="anonymous"></script>
-    <style>
-        .img-fluid
-        {
-            max-width:35px;
-        }
-        li:hover{
-            border-right:2px solid;
-            border-left:2px solid;
-            border-color:dimgray;
-        }
-        .padding 
-        {
-            padding-top:8px;
-        }
-    </style>
+	<script src="https://kit.fontawesome.com/07b62ac2c8.js" crossorigin="anonymous"></script>
+	<style>
+		.img-fluid {
+			max-width: 35px;
+		}
+
+		li:hover {
+			border-right: 2px solid;
+			border-left: 2px solid;
+			border-color: dimgray;
+		}
+
+		.padding {
+			padding-top: 8px;
+		}
+
+
+		.vertical-center {
+			margin: 0;
+			position: absolute;
+			top: 50%;
+			-ms-transform: translateY(-50%);
+			transform: translateY(-50%);
+		}
+		
+		
+	</style>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand me-sm-3 padding" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/favicon.ico" /><b>MyWatchList</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Animes" asp-action="Index">Anime</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movie</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TvShows" asp-action="Index">Series</a>
-                        </li>
-                    </ul>
-                </div>
-                    <partial name="_LoginPartial" />
-            </div>
-        </nav>
-    </header>
-    @*//added new *@
 
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+	<header>
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+			<div class="container-fluid">
+				<a class="navbar-brand me-sm-3 padding" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/favicon.ico" /><b>MyWatchList</b></a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+						aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+					<ul class="navbar-nav flex-grow-1">
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Animes" asp-action="Index">Anime</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movie</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="TvShows" asp-action="Index">Series</a>
+						</li>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - MyWatchList - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery/dist/chosen.jquery.min.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+						@if (User.Identity.IsAuthenticated)
+						{
+							if (User.IsInRole("admin") || User.IsInRole("user"))
+							{
+								<li class="nav-item dropdown">
+									<a href="#" class="nav-link data-toggle text-dark" data-bs-toggle="dropdown">My Lists</a>
+									<div class="dropdown-menu">
+										<a asp-controller="Animes" asp-action="MyAnimeList" class="dropdown-item">Animes List</a>
+										<a asp-controller="Movies" asp-action="MyMovieList" class="dropdown-item">Movies List</a>
+										<a asp-controller="TvShows" asp-action="MyShowList" class="dropdown-item">Series List</a>
+									</div>
+								</li>
+							}
+
+						}
+					</ul>
+				</div>
+				<partial name="_LoginPartial" />
+			</div>
+		</nav>
+	</header>
+
+	<div class="container">
+		<main role="main" class="pb-3">
+			@RenderBody()
+		</main>
+	</div>
+
+
+
+	<footer class="border-top footer text-muted">
+		<div class="container ">
+			&copy; 2022 - MyWatchList - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+		</div>
+	</footer>
+
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="~/lib/jquery/dist/chosen.jquery.min.js"></script>
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
