--- a/Proje/Views/Shared/_LoginPartial.cshtml
+++ b/Proje/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-controller="Account" asp-action="Login" title="Manage">Hello @UserManager.GetUserAsync(User).Result.Name!</a>
+        <label id="manage" class="nav-link text-dark" >Hello @UserManager.GetUserAsync(User).Result.Name</label>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
