--- a/Proje/Views/TvShows/addShow.cshtml
+++ b/Proje/Views/TvShows/addShow.cshtml
@@ -1,4 +1,4 @@
-﻿@model Proje.Models.AnimeUser
+﻿@model Proje.Models.TvShowUser
 
 
 <style>
@@ -26,10 +26,10 @@
 
 
 	<div class="col-md-3 box">
-		<div class="text-center mb-5"><h2>Add anime to list</h2></div>
-		<form asp-action="addAnime">
+		<div class="text-center mb-5"><h2>Add Series to list</h2></div>
+		<form asp-action="addShow">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-			<input type="hidden" asp-for="animeId" />
+			<input type="hidden" asp-for="showId" />
 			<input type="hidden" asp-for="userId" />
 			<div class="mb-4">
 				<label asp-for="watchStatus" class="control-label"></label>
