--- a/Proje/Views/Animes/addAnime.cshtml
+++ b/Proje/Views/Animes/addAnime.cshtml
@@ -27,7 +27,7 @@
 
 
 	<div class="col-md-3 box">
-		<div class="text-center mb-5"><h2>Add anime to list</h2></div>
+		<div class="text-center mb-5"><h2>@localizer["Add anime to list"]</h2></div>
 		<form asp-action="addAnime">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<input type="hidden" asp-for="animeId" />
@@ -35,7 +35,7 @@
 			<div class="mb-4">
 				<label asp-for="watchStatus" class="control-label"></label>
 				<select asp-for="watchStatus" class="form-select" required>
-					<option value="">@localizer["Select score"]</option>
+					<option value="">@localizer["Select Status"]</option>
 					<option value="Completed">@localizer["Completed"]</option>
 					<option value="Watching">@localizer["Watching"]</option>
 					<option value="Plan to watch">@localizer["Plan to watch"]</option>
@@ -45,7 +45,7 @@
 			<div class="mb-4">
 				<label asp-for="userRating" class="control-label"></label>
 				<select asp-for="userRating" class="form-select" required>
-					<option value="">@localizer["Select score"]</option>
+					<option value="">@localizer["Select Score"]</option>
 					<option value=10>10</option>
 					<option value=9>9</option>
 					<option value=8>8</option>
