--- a/Proje/Views/Movies/Delete.cshtml
+++ b/Proje/Views/Movies/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model Proje.Models.Movie
+﻿
+@model Proje.Models.Movie
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer localizer
 @{
