--- a/Proje/Views/Movies/MyMovieList.cshtml
+++ b/Proje/Views/Movies/MyMovieList.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<Proje.Models.MovieUser>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 
 <style>
 	.Form1 {
@@ -83,16 +85,16 @@
 	<form method="get" asp-action="MyMovieList" id="Form" class="form-inline Form1">
 		<div class="row">
 			<div class="col input-group">
-				<label class="col-sm-2 col-form-label">Sort By:</label>
+				<label class="col-sm-2 col-form-label">@localizer["Sort By"] :</label>
 				<div class="input-group-append">
 					<select id="sortBy" name="sortBy" class="form-select" width=100%>
-						<option selected value="">Please select an option</option>
-						<option value="title">Title</option>
-						<option value="year">Most recent</option>
-						<option value="rating">Rating</option>
-						<option value="runningTime">Running Time</option>
-						<option value="planToWatch">Plan to Watch</option>
-						<option value="completed">Completed</option>
+						<option selected value="">@localizer["Please select an option"]</option>
+						<option value="title">@localizer["Title"]</option>
+						<option value="year">@localizer["Most recent"]</option>
+						<option value="rating">@localizer["Rating"]</option>
+						<option value="runningTime">@localizer["Time"] </option>
+						<option value="planToWatch">@localizer["Plan to Watch"]</option>
+						<option value="completed">@localizer["Completed"]</option>
 					</select>
 				</div>
 			</div>
@@ -100,7 +102,7 @@
 			<div class="col input-group ">
 				<input type="text" class="form-control" name="search" autocomplete="off">
 				<div class="input-group-append">
-					<button class="btn btn-info" type="submit" value="Search">Search</button>
+					<button class="btn btn-info" type="submit" value="Search">@localizer["Search"]</button>
 				</div>
 			</div>
 	</form>
@@ -127,12 +129,12 @@
 				</td>
 				<td class="text-left">
 					
-					@Html.DisplayFor(modelItem => item.watchStatus)
+					@Html.DisplayFor(modelItem => item.watchStatus) 
 				</td>
 
 				<td>
-					<a asp-action="deleteMovie" asp-route-movieId="@item.movieId" asp-route-userId="@item.userId" class="delete">Delete</a>
-					<a asp-action="editMovie" asp-route-movieId="@item.movieId">Edit</a>
+					<a asp-action="deleteMovie" asp-route-movieId="@item.movieId" asp-route-userId="@item.userId" class="delete">@localizer["Delete"]</a>
+					<a asp-action="editMovie" asp-route-movieId="@item.movieId">@localizer["Edit"]</a>
 				</td>
 			</tr>
 		}
