--- a/Proje/Views/Movies/addMovie.cshtml
+++ b/Proje/Views/Movies/addMovie.cshtml
@@ -1,4 +1,6 @@
 ﻿@model Proje.Models.MovieUser
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 
 
 <style>
@@ -26,7 +28,7 @@
 
 
 	<div class="col-md-3 box">
-		<div class="text-center mb-5"><h2>Add movie to list</h2></div>
+		<div class="text-center mb-5"><h2>@localizer["Add movie to list"]</h2></div>
 		<form asp-action="addMovie">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<input type="hidden" asp-for="movieId" />
@@ -34,16 +36,16 @@
 			<div class="mb-4">
 				<label asp-for="watchStatus" class="control-label"></label>
 				<select asp-for="watchStatus" class="form-select" required>
-					<option value="">Select score</option>
-					<option value="Completed">Completed</option>
-					<option value="Plan to watch">Plan to watch</option>
+					<option value="">@localizer["Select Status"]</option>
+					<option value="Completed">@localizer["Completed"]</option>
+					<option value="Plan to watch">@localizer["Plan to watch"]</option>
 				</select>
 				<span asp-validation-for="watchStatus" class="text-danger"></span>
 			</div>
 			<div class="mb-4">
 				<label asp-for="userRating" class="control-label"></label>
 				<select asp-for="userRating" class="form-select" required>
-					<option value="">Select score</option>
+					<option value="">@localizer["Select Score"]</option>
 					<option value=10>10</option>
 					<option value=9>9</option>
 					<option value=8>8</option>
@@ -59,7 +61,7 @@
 			</div>
 
 			<div class="form-group">
-				<input type="submit" value="Submit" class="btn btn-primary float-lg-end" />
+				<input type="submit" value="@localizer["Submit"]" class="btn btn-primary float-lg-end" />
 			</div>
 		</form>
 	</div>
