--- a/Proje/Views/Shared/_Layout.cshtml
+++ b/Proje/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
-				<a class="navbar-brand me-sm-3 padding" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/favicon.ico" /><b>MyWatchList</b></a>
+				<a class="navbar-brand me-sm-3 padding" asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/favicon.ico" /><b>@localizer["MyWatchList"]</b></a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -67,13 +67,13 @@
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Animes" asp-action="Index">Anime</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Animes" asp-action="Index">@localizer["Anime"]</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">Movie</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Index">@localizer["Movie"]</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="TvShows" asp-action="Index">Series</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="TvShows" asp-action="Index">@localizer["Series"]</a>
 						</li>
 
 						@if (User.Identity.IsAuthenticated)
@@ -81,11 +81,11 @@
 							if (User.IsInRole("admin") || User.IsInRole("user"))
 							{
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link data-toggle text-dark" data-bs-toggle="dropdown">My Lists</a>
+									<a href="#" class="nav-link data-toggle text-dark" data-bs-toggle="dropdown">@localizer["My Lists"]</a>
 									<div class="dropdown-menu">
-										<a asp-controller="Animes" asp-action="MyAnimeList" class="dropdown-item">Animes List</a>
-										<a asp-controller="Movies" asp-action="MyMovieList" class="dropdown-item">Movies List</a>
-										<a asp-controller="TvShows" asp-action="MyShowList" class="dropdown-item">Series List</a>
+										<a asp-controller="Animes" asp-action="MyAnimeList" class="dropdown-item">@localizer["Animes List"]</a>
+										<a asp-controller="Movies" asp-action="MyMovieList" class="dropdown-item">@localizer["Movies List"]</a>
+										<a asp-controller="TvShows" asp-action="MyShowList" class="dropdown-item">@localizer["Series List"]</a>
 									</div>
 								</li>
 							}
@@ -114,7 +114,7 @@
 
 	<footer class="border-top footer text-muted">
 		<div class="container ">
-			&copy; 2022 - MyWatchList - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			&copy; 2022 - MyWatchList - <a asp-area="" asp-controller="Home" asp-action="Privacy">@localizer["Privacy"]</a>
 		</div>
 	</footer>
 
