--- a/Proje/Views/TvShows/MyShowList.cshtml
+++ b/Proje/Views/TvShows/MyShowList.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<Proje.Models.TvShowUser>
-
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 <style>
 	.Form1 {
 		background-color: #222831;
@@ -84,17 +85,17 @@
 	<form method="get" asp-action="MyShowList" id="Form" class="form-inline Form1">
 		<div class="row">
 			<div class="col input-group">
-				<label class="col-sm-2 col-form-label">Sort By:</label>
+				<label class="col-sm-2 col-form-label">@localizer["Sort By"]:</label>
 				<div class="input-group-append">
 					<select id="sortBy" name="sortBy" class="form-select" width=100%>
-						<option selected value="">Please select an option</option>
-						<option value="title">Title</option>
-						<option value="year">Most recent</option>
-						<option value="rating">Rating</option>
-						<option value="episodes">Number of episodes</option>
-						<option value="planToWatch">Plan to Watch</option>
-						<option value="completed">Completed</option>
-						<option value="watching">Watching</option>
+						<option selected value="">@localizer["Please select an option"]</option>
+						<option value="title">@localizer["Title"]</option>
+						<option value="year">@localizer["Most recent"]</option>
+						<option value="rating">@localizer["Rating"]</option>
+						<option value="episodes">@localizer["Number of episodes"]</option>
+						<option value="planToWatch">@localizer["Plan to Watch"]</option>
+						<option value="completed">@localizer["Completed"]</option>
+						<option value="watching">@localizer["Watching"]</option>
 					</select>
 				</div>
 			</div>
@@ -102,7 +103,7 @@
 			<div class="col input-group ">
 				<input type="text" class="form-control" name="search" autocomplete="off">
 				<div class="input-group-append">
-					<button class="btn btn-info" type="submit" value="Search">Search</button>
+					<button class="btn btn-info" type="submit" value="@localizer["Search"]"></button>
 				</div>
 			</div>
 	</form>
@@ -132,8 +133,8 @@
 				</td>
 
 				<td>
-					<a asp-action="deleteShow" asp-route-showId="@item.showId" asp-route-userId="@item.userId" class="delete">Delete</a>
-					<a asp-action="editShow" asp-route-showId="@item.showId">Edit</a>
+					<a asp-action="deleteShow" asp-route-showId="@item.showId" asp-route-userId="@item.userId" class="delete">@localizer["Delete"]</a>
+					<a asp-action="editShow" asp-route-showId="@item.showId">@localizer["Edit"]</a>
 				</td>
 			</tr>
 		}
