--- a/Proje/Views/TvShows/MyShowList.cshtml
+++ b/Proje/Views/TvShows/MyShowList.cshtml
@@ -103,7 +103,7 @@
 			<div class="col input-group ">
 				<input type="text" class="form-control" name="search" autocomplete="off">
 				<div class="input-group-append">
-					<button class="btn btn-info" type="submit" value="@localizer["Search"]"></button>
+					<button class="btn btn-info" type="submit" value="Search">@localizer["Search"]</button>
 				</div>
 			</div>
 	</form>
