--- a/Proje/Views/Movies/Index.cshtml
+++ b/Proje/Views/Movies/Index.cshtml
@@ -138,7 +138,7 @@
 						if (User.IsInRole("admin"))
 						{
 							<a asp-action="Edit" asp-route-id="@item.movieId">@localizer["Edit"]</a>
-							<a asp-action = "Delete" asp-route-id = "@item.movieId">@localizer["Delete"]</a>
+							<a asp-action = "Delete" asp-route-id = "@item.movieId" class="delete">@localizer["Delete"]</a>
 						}
 					}
 				</td>
